Renseignement sur Smart et les avantages à l'emploi

--- a/CV_PDF.html
+++ b/CV_PDF.html
@@ -35,12 +35,16 @@
 <body>
     <!--Le header DEBUT-->
     <header class="dys" id="navigation">
+        <a href="index.html" class="active" alt="Accueil"><img src="assets/image/Dzénetan Massart.png" id="profil" /><span>Accueil</span> </a>
 
-        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> Accueil</a>
+        <a class="cv" href="CV.html" alt="Version PDF Général">📜<span>Version en ligne</span></a>
+        <a href="index.html#outils" class="outils" alt="Outils">🧰<span>Outils</span></a>
+        <a href="index.html#parcours" class="parcours" alt="Parcours">💼<span>Parcours</span></a>
+        <a href="mailto:dzenetan.massart@gmail.com"><i class="fas fa-envelope"></i> <span>Contacter par e-mail</span></a>
 
-        <a class="cv" href="CV.html">CV</a>
-        <a href="index.html#outils">Outils</a>
-        <a href="index.html#parcours">Parcours</a>
+
+        <script src="assets/navbar/navbar.js"></script>
+
 
 
     </header>
