--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta name="full-screen" content="yes">
     <link rel="stylesheet" href="assets/navbar/navbar.css">
     <link rel="stylesheet" href="assets/css/apps.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!--Generate with https://www.favicon-generator.org/-->
     <link rel="apple-touch-icon" sizes="57x57" href="root/ico/apple-icon-57x57.png">
@@ -60,7 +59,7 @@
         <a class="cv" href="CV.html">📜<span>CV</span></a>
         <a href="#outils" class="outils">🧰<span>Outils</span></a>
         <a href="#parcours" class="parcours">💼<span>Parcours</span></a>
-
+        <a href="mailto:dzenetan.massart@gmail.com"><i class="fas fa-envelope"></i> <span>Contacter par e-mail</span></a>
 
     </header>
 
@@ -71,8 +70,11 @@
 
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
         <div class="intro dys">
-            <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"</a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan Massart.</p>
+            <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"<sup><i class="fa-solid fa-link"></i></sup></a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan
+                Massart.
+            </p>
             <p>Entre-temps, ce site a évolué pour vous mettre en avant bien plus que tout ce qui touche au code en énumérant les différentes capacités que Dzénetan Massart vous propose à mettre à contribution pour vos projets.</p>
+            <p>Depuis Novembre 2022, Dzénetan Massart est membre de la <a href="https://smartbe.be/fr/">Smart<sup><i class="fa-solid fa-link"></i></sup></a> pour les prestations.</p>
         </div>
         <div class="inline">
             <ul class="logiciels dys">
@@ -93,12 +95,23 @@
                 <li>
                     <a href="https://fonts.google.com/">Google Font</a>
                 </li>
+                <li>
+                    <a href="https://www.getpaint.net/download.html">Paint.NET</a>
+                </li>
+                <li>
+                    <a href="https://htmlcheatsheet.com/css/">CSS CheatSheet</a>
+                </li>
             </ul>
 
 
             <ul class="technologies dys">
                 <span> <i class="fas fa-laptop-code"></i> Liste des langages que j'emplois pour créer ce site:</span>
-
+                <li>
+                    Français
+                </li>
+                <li>
+                    Anglais
+                </li>
                 <li>
                     Git
                 </li>
@@ -119,7 +132,7 @@
             <ul class="capacites dys">
                 <span> <i class="fas fa-briefcase"></i> Liste des capacités que je peux vous proposer</span>
 
-                <li title="J'utilise donc Adobe Premiere et Adobe After Effect">
+                <li title="J'utilise donc Adobe Premiere et Adobe After Effect principalement">
                     Montage-vidéo
                 </li>
                 <li title="J'utilise donc du papier et PaintDotNet/Adobe Photoshop">
@@ -161,8 +174,8 @@
                 <li title="J'utilise donc ABSOLUMENT TOUT">
                     Animation de communauté sur les réseaux sociaux <sup>(Community Managing)</sup>
                 </li>
-                <li title="J'utilise After Effect, Adobe Premiere, Blender et Panzoid">
-                    Création d'intro' <sup>(animation de logo)</sup>
+                <li title="J'utilise donc Google Maps et Google Earth">
+                    Enregistrement complet d'un commerce sur Google Maps <sup>(Community Managing)</sup>
                 </li>
             </ul>
             <ul class="programmes dys">
@@ -199,6 +212,9 @@
                     Microsoft PowerPoint
                 </li>
                 <li>
+                    Microsoft Excel
+                </li>
+                <li>
                     Panzoid
                 </li>
                 <li>
@@ -217,7 +233,7 @@
     <!--La div ayant les applications DEBUT-->
     <section class="apps dys">
         <h2 id="outils">Les Outils</h2>
-        <p class="description">Ici se trouvent les outils que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github  </a>!</p>
+        <p class="description">Ici se trouvent les outils que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github<sup><i class="fa-solid fa-link"></i></sup> </a>!</p>
         <div class="appsview" id="generate"></div>
     </section>
     <!--La div ayant les applications FIN-->
