Mise à jour mensuel 11-22

--- a/CV.html
+++ b/CV.html
@@ -270,6 +270,51 @@
                 </p>
         </section>
 
+        <h3>Expériences professionelles</h3>
+
+        <section class="exp">
+            <article class="com">
+                <h4>Web Managing - La Récréation de Fran ( 12/11/22 )</h4>
+                <div>
+                    <ul>
+                        <li>
+                            <span class="icon ">
+                                <i class="fas fa-map-marker photo ">
+                            </i>
+                            </span> Photographie des productions
+                        </li>
+                        <li>
+                            <span class="icon ">
+                                <i class="fas fa-map-marker cm ">
+                            </i>
+                            </span> Localisation sur Google Maps
+                        </li>
+                        <li>
+                            <span class="icon ">
+                                <i class="fas fa-map-marker cm ">
+                            </i>
+                            </span> Remplissage des fiches sur Google Maps
+                        </li>
+                        <li>
+                            <span class="icon ">
+                                <i class="fas fa-map-marker vm ">
+                            </i>
+                            </span> Création d'une affiche d'accueil
+                        </li>
+                    </ul>
+                    <a href="https://www.facebook.com/CreationsdeFran/">
+                        <img src="https://scontent.fbru2-1.fna.fbcdn.net/v/t39.30808-6/236340814_286567176601174_3334199466495020108_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=e3f864&_nc_ohc=Cqdkz_3mqEcAX9R9grj&_nc_ht=scontent.fbru2-1.fna&oh=00_AfAjiJHRGcKH9UP1HBEhmg_BANj8M1o5-743ar0kUQ8jrQ&oe=63895B2D"
+                            alt="La Récréation de Fran"> Le Facebook de <span>"la Récréation de Fran"</span></a>
+                </div>
+
+            </article>
+
+        </section>
+
+
+
+
+
         <h3>Hobbies</h3>
 
         <section class="hobbies ">
