--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
                 <li>
                     FireAlpaca
                 </li>
+                <li>
+                    Google Maps
+                </li>
             </ul>
         </div>
 
@@ -233,7 +236,7 @@
     <!--La div ayant les applications DEBUT-->
     <section class="apps dys">
         <h2 id="outils">Les Outils</h2>
-        <p class="description">Ici se trouvent les outils que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github<sup><i class="fa-solid fa-link"></i></sup> </a>!</p>
+        <p class="description">Ici se trouvent les outils que j'ai créés sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github<sup><i class="fa-solid fa-link"></i></sup> </a>!</p>
         <div class="appsview" id="generate"></div>
     </section>
     <!--La div ayant les applications FIN-->
