Amélioration de l'affichage sur mobile

--- a/CV.html
+++ b/CV.html
@@ -133,6 +133,16 @@
 
 
             </article>
+
+            <article>
+                <h4>Membre de la Smart</h4>
+                <div>
+                    <p>Facilité de Gestion pour les prestations de courte durée ( moins d'un mois ).</p>
+                    <a href="https://guide.smart.coop/">Plus d'information ici</a></div>
+
+
+
+            </article>
         </section>
 
 
@@ -274,7 +284,7 @@
 
         <section class="exp">
             <article class="com">
-                <h4>Web Managing - La Récréation de Fran ( 12/11/22 )</h4>
+                <h4>Web Managing - <span>La Récréation de Fran</span> ( 12/11/22 )</h4>
                 <div>
                     <ul>
                         <li>
