Mise à jour de Janvier 2023

--- a/CV.html
+++ b/CV.html
@@ -195,7 +195,7 @@
                 <ul>
                     <li><img class="prog " alt="Logo Adobe Photoshop " src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Adobe_Photoshop_CS6_icon.svg/300px-Adobe_Photoshop_CS6_icon.svg.png "></img>Adobe Photoshop</li>
                     <li><img class="prog " alt="Logo PaintDotNet " src="https://i1.wp.com/blogs.lyceecfadumene.fr/informatique/files/2011/11/PaintNET_Icon.png?ssl=1 "></img>PaintDotNet</li>
-                    <li><img class="prog " alt="Logo Adobe Illustrator " src="https://img.pngio.com/buy-adobe-education-contact-multiblue-and-receive-discounts-for-logo-adobe-illustrator-png-600_600.png "></img>Adobe Illustrator</li>
+                    <li><img class="prog " alt="Logo Adobe Illustrator " src="https://www.abforma.fr/img/cms/logo%20illustrator_1.png"></img>Adobe Illustrator</li>
                     <li><img class="prog " alt="Logo Photopea " src="https://www.photopea.com/promo/icon512.png"></img>Photopea</li>
                     <li><img class="prog " alt="Logo FireAlpaca " src="https://firealpaca.com/images/fa/en_logo_pict.png?202205"></img>FireAlpaca</li>
 
@@ -297,7 +297,7 @@
                             <span class="icon ">
                                 <i class="fas fa-map-marker cm ">
                             </i>
-                            </span> Localisation sur Google Maps
+                            </span>  <a href="https://goo.gl/maps/QXnJG8Cw72Qd6m5M9">Localisation sur Google Maps</a>
                         </li>
                         <li>
                             <span class="icon ">
@@ -313,8 +313,8 @@
                         </li>
                     </ul>
                     <a href="https://www.facebook.com/CreationsdeFran/">
-                        <img src="https://scontent.fbru2-1.fna.fbcdn.net/v/t39.30808-6/236340814_286567176601174_3334199466495020108_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=e3f864&_nc_ohc=Cqdkz_3mqEcAX9R9grj&_nc_ht=scontent.fbru2-1.fna&oh=00_AfAjiJHRGcKH9UP1HBEhmg_BANj8M1o5-743ar0kUQ8jrQ&oe=63895B2D"
-                            alt="La Récréation de Fran"> Le Facebook de <span>"la Récréation de Fran"</span></a>
+                        <img src="assets/image/CV pics/La Récréation de Fran.jpg"
+                            alt="La Récréation de Fran"></a>
                 </div>
 
             </article>
