--- a/index.html
+++ b/index.html
@@ -177,6 +177,18 @@
                 <li title="J'utilise donc Google Maps et Google Earth">
                     Enregistrement complet d'un commerce sur Google Maps <sup>(Community Managing)</sup>
                 </li>
+                <li title="J'utilise donc un scanner et ILovePDF">
+                                   Scanning <sup>(Employé de Services)</sup>
+                </li>
+                <li title="J'utilise donc l'explorateur ou une vraie bibliothèque">
+                Classement <sup>(Employé de Services)</sup>
+                </li>
+                <li title="J'utilise donc une imprimante et ILovePDF">
+                Photocopier <sup>(Employé de Services)</sup>
+                </li>
+                <li title="J'utilise donc mes mains et mes pieds pour mettre la lettre dans une boite rouge">
+                Mise sous enveloppe <sup>(Employé de Services)</sup>
+                </li>
             </ul>
             <ul class="programmes dys">
                 <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois souvent</span>
@@ -215,7 +227,7 @@
                     Microsoft Excel
                 </li>
                 <li>
-                    Panzoid
+                    Panzoid Clipmaker 2
                 </li>
                 <li>
                     Blender
@@ -225,6 +237,9 @@
                 </li>
                 <li>
                     Google Maps
+                </li>
+                <li>
+                    ILovePDF
                 </li>
             </ul>
         </div>
@@ -251,7 +266,7 @@
     </section>
 
     <!--La div ayant le parcours FIN-->
-    <div class="copyright">Copyright © 2017-2022 Dzénetan Massart</div>
+    <div class="copyright">Copyright © 2017-2023 Dzénetan Massart</div>
 
 
     <!--Les scripts-->
