Nouveaux systèmes pour les CVs
Maintenant, on aura un dossier ayant plusieurs CVs selon le métier.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 
         <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> <span>Accueil</span> </a>
 
-        <a class="cv" href="CV.html">📜<span>CV</span></a>
+<details class="cv">
+    <summary>📜<span>Les CVs</span></summary>
+    <a href="CV/community_manager.html" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
+</details>
         <a href="#outils" class="outils">🧰<span>Outils</span></a>
         <a href="#parcours" class="parcours">💼<span>Parcours</span></a>
         <a href="mailto:dzenetan.massart@gmail.com"><i class="fas fa-envelope"></i> <span>Contacter par e-mail</span></a>
