Ajout du Portefolio

--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
 
 <details class="cv">
     <summary>📜<span>Les CVs</span></summary>
-    <a href="CV/community_manager.html" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
+    <ul>
+        <li><a href="CV/community_manager.html" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
+</li>
+        <li><a href="portefolio.html" alt="portefolio">📚<span>Portefolio</span></a>
+</li>
+    </ul>
+
 </details>
         <a href="#outils" class="outils">🧰<span>Outils</span></a>
         <a href="#parcours" class="parcours">💼<span>Parcours</span></a>
