--- a/CV/community_manager.html
+++ b/CV/community_manager.html
@@ -57,10 +57,16 @@
         <a href="../index.html" class="active" alt="Accueil"><img src="../assets/image/Dzénetan Massart.png"
                 id="profil" /><span>Accueil</span> </a>
     
-<details class="cv"> 
-    <summary>📜<span>Les CVs</span></summary>
-    <a href="#" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
-</details>
+            <details class="cv">
+                <summary>📜<span>Les CVs</span></summary>
+                <ul>
+                    <li><a href="community_manager.html" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
+                    </li>
+                    <li><a href="../portefolio.html" alt="portefolio">📚<span>Portefolio</span></a>
+                    </li>
+                </ul>
+            
+            </details>
         <a href="../index.html#outils" class="outils" alt="Outils">🧰<span>Outils</span></a>
         <a href="../index.html#parcours" class="parcours" alt="Parcours">💼<span>Parcours</span></a>
         <a href="mailto:dzenetan.massart@gmail.com"><i class="fas fa-envelope"></i> <span>Contacter par e-mail</span></a>
