Amélioration de la navbar

--- a/portefolio.html
+++ b/portefolio.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="assets/css/porte-folio.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    
+
 </head>
 
 <body>
@@ -63,65 +63,67 @@
         <script src="assets/navbar/navbar.js"></script>
 <h1>Dzénetan Massart : Portefolio</h1>
 <main>
-    <h2>Sites Web</h2>
+
+    <h2>🌐 Sites Web</h2>
     <section class="sites">
 <article>
-                <h4>Tricks and Tips</h4>
+                <h4>🧰 Tricks and Tips</h4>
                 <p>Un site web répertoriant de la documentation au sujet du dévellopement web dans divers langages,CMS,...</p>
                <p>Projet commencé en 2019.</p>
                 <a target="_blank" href="https://dzenetanmassart.github.io/Tricks-and-Tips/">S'y rendre</a>
             </article>
             <article>
-                <h4>Le site web</h4>
+                <h4>📘 Le site web</h4>
                 <p>Un site web résumant toutes les capacités de Dzénetan Massart dans des CVs, une liste de logiciel, une liste de tâche,...</p>
                 <p>Projet commencé en 2017.</p>
                 <a target="_blank" href="https://dzenetanmassart.github.io/">S'y rendre</a>
             </article>
             <article>
-                <h4>Make On Websoft</h4>
+                <h4>🛠️ Make On Websoft</h4>
                 <p>Un site web répertoriant des logiciels de créations sur le web dans divers format.</p>
                 <p>Projet commencé en 2019.</p>
                 <a target="_blank" href="https://dzenetanmassart.github.io/MakeOnWeb/">S'y rendre</a>
             </article>
 </section>
 
-<h2>Photographies</h2>
+<h2>📷 Photographies</h2>
     <a href="https://www.behance.net/dznetanmassart" target="_blank" rel="noopener noreferrer" class="Behance">Vers la page <i
             class="fa-brands fa-behance"></i>hance</a>
 
 <section class="photographies">
 <article>
-    <h4>2 bancs du domaine de Chevetogne</h4>
+    <h4>🌲 2 bancs du domaine de Chevetogne</h4>
     <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/264fab104117057.5f5ba444bf285.jpg" alt="2 bancs du domaine de Chevetogne" srcset="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/264fab104117057.5f5ba444bf285.jpg">
     <p>En Août 2020, je suis aller au <a href="https://www.domainedechevetogne.be/">Domaine de Chevetogne</a>. Beaucoup de photographies en été faîtes dans un cadre vert.</p>
 <a href="https://www.behance.net/gallery/104117057/Reprage-a-Chevetogne" class="projet">Repérage à Chevetogne</a>
 </article>
 <article>
-    <h4>Vue depuis le Château de La Roche-en-Ardenne</h4>
+    <h4>🏰 Vue depuis le Château de La Roche-en-Ardenne</h4>
     <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/ec2a70103840487.5f5633de5a510.jpg" alt="Panoramique de la vue depuis le Château de La Roche-en-Ardenne" srcset="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/ec2a70103840487.5f5633de5a510.jpg">
     <p>En Août 2020, je suis aller au <a href="https://fr.wikipedia.org/wiki/Ch%C3%A2teau_de_La_Roche-en-Ardenne">Château de La Roche-en-Ardenne</a>. Les photographies sont essentiellement focus sur des décors.</p>
 <a href="https://www.behance.net/gallery/103840487/Chateau-de-La-Roche-en-Ardenne" class="projet">Château de La Roche-en-Ardenne</a>
 </article>
 </section>
-<h2>Profil Google Maps</h2>
+<h2> <img src="https://grafikart.fr/uploads/icons/google-maps.png" alt="Icone Google Maps" style="width:5vw" srcset="https://grafikart.fr/uploads/icons/google-maps.png"> Profil Google Maps</h2>
 <section class="gmaps">
                 <img src="https://lh3.googleusercontent.com/a/AGNmyxbkZWLItj8o1UPF9oPw-PHdeszEOKnLfI-hSWftQQ=w60-h60-p-rp-mo-ba4-br100"
                     alt="Profil Dzénetan Massart"
                     srcset="https://lh3.googleusercontent.com/a/AGNmyxbkZWLItj8o1UPF9oPw-PHdeszEOKnLfI-hSWftQQ=w60-h60-p-rp-mo-ba4-br100">
 <h3>Dzénetan Massart</h3>
                 <p>Local Guide · Niveau 6</p>
-                <p>Contributions</p>
+                <p>Points de Contributions</p>
 
                 <div class="progress_bar">
                     <span>1 500</span>
-                    <div style="width:31.65714285714286%">2 608</div>
+                    <div style="width:49.17142857142857%">3 221</div>
                     <span>5 000</span>
                 </div>
 <a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
     target="_blank" rel="noopener noreferrer">Voir le profil complet</a>
 </section>
 
-<h2>Profil LinkedIn</h2>
+<h2> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Icone LinkedIn" style="width:5vw; background-color: white;border-radius: 10%;"
+    srcset="https://cdn-icons-png.flaticon.com/512/174/174857.png"> Profil LinkedIn</h2>
 <section class="LinkedIn">
     <img src="https://media.licdn.com/dms/image/D4E03AQFHbSObPoyVjA/profile-displayphoto-shrink_200_200/0/1676642151006?e=1686182400&v=beta&t=FLuwuvieMEZlR9NNM0uVK7DHvty33h0EloSu1KW-tNc"
         alt="Profil Dzénetan Massart"
