--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!Doctype html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DD2RVSTR9B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DD2RVSTR9B');
+</script>
     <meta charset="UTF-8" />
     <meta lang="fr">
     <title>Dzénetan Massart-Le site</title>
