--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Dzénetan Massart-Le site</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Le site web de Dzénetan Massart" />
-    <meta name="keywords" content="CV,Dzénetan,Massart,vidéo,gif,applications,Employé de Service" />
+    <meta name="keywords" content="CV,Dzénetan,Massart,vidéo,gif,applications,Employé de Services,logiciels,administration,Namur" />
     <meta name="author" content="Dzénetan Massart" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="full-screen" content="yes">
