--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 <details class="cv">
     <summary>📜<span>Les CVs</span></summary>
     <ul>
-        <li><a href="CV/community_manager.html" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
+        <li><a href="CV/community_manager.html" alt="CV de Community Manager" style="margin:-120%;">🌐<span>Community Manager</span></a>
 </li>
-        <li><a href="portefolio.html" alt="portefolio">📚<span>Portefolio</span></a>
+        <li><a href="portefolio.html" alt="portefolio" style="margin:-120%;">📚<span>Portefolio</span></a>
 </li>
     </ul>
 
