Mise à jour de fin Avril

--- a/assets/navbar/navbar.html
+++ b/assets/navbar/navbar.html
@@ -12,18 +12,42 @@
 </head>
 
 <body>
-    <header class="dys" id="navigation">
+  <!--Le header FIN-->
+  <header class="dys" id="navigation">
 
-        <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> </a>
+    <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> <span>Accueil</span> </a>
 
-        <a class="cv" href="CV_PDF.html">📜<span>Version PDF Général</span></a>
-        <a href="index.html#outils" class="outils"> 🧰<span>Outils</span></a>
-        <a href="index.html#parcours" class="parcours">💼 <span>Parcours</span></a>
+<details class="cv">
+<summary>📜<span>Les CVs</span></summary>
+<ul>
+    <li><a href="CV/community_manager.html" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
+</li>
+    <li><a href="portefolio.html" alt="portefolio">📚<span>Portefolio</span></a>
+</li>
+</ul>
 
+</details>
+    <a href="#outils" class="outils">🧰<span>Outils</span></a>
+    <a href="#parcours" class="parcours">💼<span>Parcours</span></a>
+    <details>
+        <summary>📜<span>Contactez</span></summary>
+        <ul>
+            <li> <a href="mailto:dzenetan.massart@gmail.com">✉️ <span>e-mail</span></a>
+            </a>
+        </li>
+            <li><a href="https://www.linkedin.com/in/dzenetan-massart/" alt="LinkedIn">🪪<span>LinkedIn</span></a>
+        </li>
+        <li><a href="        https://www.facebook.com/people/Dz%C3%A9netan-Massart/pfbid0M3U254AVG7XncCf1iriRqj2VPKVUWj54MBYEtwN8xNm6Jhf6RGa1vHM3FkRSdMd3l/
+            " alt="Facebook">📇<span>Facebook</span></a>
+        </li>
+        </ul>
+        
+        </details>
 
-    </header>
+</header>
 
-    <script src="navbar.js"></script>
+<script src="assets/navbar/navbar.js"></script>
+<!--Le main Debut-->
 </body>
 
 </html>
