--- a/portefolio.html
+++ b/portefolio.html
@@ -119,21 +119,21 @@
 </section>
 <h2> <img src="https://grafikart.fr/uploads/icons/google-maps.png" alt="Icone Google Maps" style="width:5vw" srcset="https://grafikart.fr/uploads/icons/google-maps.png"> Profil Google Maps</h2>
 <section class="gmaps">
-                <img src="https://lh3.googleusercontent.com/a/AGNmyxbkZWLItj8o1UPF9oPw-PHdeszEOKnLfI-hSWftQQ=w60-h60-p-rp-mo-ba4-br100"
-                    alt="Profil Dzénetan Massart"
-                    srcset="https://lh3.googleusercontent.com/a/AGNmyxbkZWLItj8o1UPF9oPw-PHdeszEOKnLfI-hSWftQQ=w60-h60-p-rp-mo-ba4-br100">
+                <img src="https://lh3.googleusercontent.com/a/AGNmyxa_BgcJkRbCGTXGJVNyXX1pABnlPwK1bWwYX2AcfA=w60-h60-p-rp-mo-ba5-br100"
+                    alt="Profil Dzénetan Massart sur Google Maps"
+                    srcset="https://lh3.googleusercontent.com/a/AGNmyxa_BgcJkRbCGTXGJVNyXX1pABnlPwK1bWwYX2AcfA=w60-h60-p-rp-mo-ba5-br100">
 <h3>Dzénetan Massart</h3>
-                <p>Local Guide · Niveau 6</p>
+                <p>Local Guide · Niveau 7</p>
                 <p>Points de Contributions</p>
 
                 <div class="progress_bar">
                     <label for="gmpas">
-                        <kbd>1 500</kbd>
-                        <span>4 845</span>
-                        <kbd>5 000</kbd>
+                        <kbd>0</kbd>
+                        <span>5 000</span>
+                        <kbd>15 000</kbd>
                     </label>
 
-<progress id="gmaps" max="5000" value="4845"> 95.57142857142857% </progress>
+<progress id="gmaps" max="15000" value="5000"></progress>
                 </div>
 <a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
     target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
