Ajout du Joyeux Carnavaleux

--- a/CV.html
+++ b/CV.html
@@ -87,7 +87,7 @@
         </section>
         <!-- Tout le contenu-->
         <!--Avantage à l'emploi DÉBUT-->
-        <h3>Avantages à l'emploi</h3>
+        <h3 id="AvantagesEmploi">Avantages à l'emploi</h3>
         <section class="avantages">
             <article>
                 <h4>Impulsion 12 mois +</h4>
@@ -147,7 +147,7 @@
 
 
         <!--Sélection du métier FIN-->
-        <h3>Compétences <span id="met"></span></h3>
+        <h3 id="Competences">Compétences <span id="met"></span></h3>
         <nav class="metiers">
             <select name="metiers" id="metier">
     <option value="">--Choisissez un métier--</option>
@@ -248,7 +248,7 @@
         </section>
 
 
-        <h3>Formations</h3>
+        <h3 id="Formations">Formations</h3>
 
         <section class="timeline">
             <p class="stage"><b>2022</b> - <b>Employé de Services</b> - CollègePieX - Châtelineau <span>STAGE</span></p>
@@ -280,7 +280,7 @@
                 </p>
         </section>
 
-        <h3>Expériences professionelles</h3>
+        <h3 id="ExperiencesPro">Expériences professionelles</h3>
 
         <section class="exp">
             <article class="com">
@@ -318,14 +318,42 @@
                 </div>
 
             </article>
+            <article class="com">
+                <h4>Web Managing - <span>Le Joyeux Carnavaleux</span> ( 2023 )</h4>
+                <div>
+                    <ul>
+                        <li>
+                            <span class="icon ">
+                                <i class="fas fa-map-marker cm ">
+                            </i>
+                            </span> Production d'une image de profil
+                        </li>
+                        <li>
+                            <span class="icon ">
+                                <i class="fas fa-map-marker cm ">
+                            </i>
+                            </span> Création de miniatures
+                        </li>
+                        <li>
+                            <span class="icon ">
+                                <i class="fas fa-map-marker cm ">
+                            </i>
+                            </span> Optimisation du YouTube
+                        </li>
+                    </ul>
+                    <a href="https://www.youtube.com/@LeJoyeuxCarnavaleux">
+                        <img src="https://yt3.googleusercontent.com/ODlw_hzdJRhbfg6-yictdxGsY5B9UBbuGEqyLBEU3d6R49BKnzRlMDUMd89iYMD-IZ__EitaXkQ=s176-c-k-c0x00ffffff-no-rj"
+                            alt="Le Joyeux Carnavaleux"></a>
+                </div>
 
+            </article>
         </section>
 
 
 
 
 
-        <h3>Hobbies</h3>
+        <h3 id="Hobbies">Hobbies</h3>
 
         <section class="hobbies ">
             <div class="hob ">
