--- a/CV/community_manager.html
+++ b/CV/community_manager.html
@@ -170,6 +170,7 @@
 <section class="Experiences_professionnelles">
         <h3>Expériences professionnelles</h3>
 <ul>
+    <li> <b>Web Manager</b> – Le Joyeux Carnavaleux – Namur - (2023)</li>
     <li> <b>Web Manager</b> – Récréation de Fran – Floreffe - (2022)</li>
 </ul>
 </section>
