--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </li>
             </ul>
             <ul class="programmes dys">
-                <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois souvent</span>
+                <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois régulièrement</span>
 
                 <li>
                     Adobe Premiere Pro CS6 <sup>(amélioré avec des scripts)</sup>
@@ -231,16 +231,13 @@
                     Adobe Photoshop CS6
                 </li>
                 <li>
-                    Audacity <sup> (amélioré avec des plugins)</sup>
-                </li>
-                <li>
                     PaintDotNet <sup> (amélioré avec des plugins)</sup>
                 </li>
                 <li>
                     Visual Studio Code <sup>(amélioré avec des plugins)</sup>
                 </li>
                 <li>
-                    Adobe After Effect CS6 <sup>(amélioré avec des plugins)</sup>
+                    Adobe After Effect CS6
                 </li>
                 <li>
                     Adobe Illustrator CS6
@@ -272,6 +269,12 @@
                 <li>
                     ILovePDF
                 </li>
+                <li>
+                   Photopea
+                </li>
+                <li>
+                    Canva
+                 </li>
             </ul>
         </div>
 
