Changement de l'icone de contact

--- a/portefolio.html
+++ b/portefolio.html
@@ -56,7 +56,7 @@
     <a href="index.html#outils" class="outils">🧰<span>Outils</span></a>
     <a href="index.html#parcours" class="parcours">💼<span>Parcours</span></a>
     <details>
-        <summary>📜<span>Contactez</span></summary>
+        <summary>📮<span>Contactez</span></summary>
         <ul>
             <li> <a href="mailto:dzenetan.massart@gmail.com">✉️ <span>e-mail</span></a>
             </a>
