--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <a href="#outils" class="outils">🧰<span>Outils</span></a>
     <a href="#parcours" class="parcours">💼<span>Parcours</span></a>
     <details>
-        <summary>📜<span>Contactez</span></summary>
+        <summary>📮<span>Contactez</span></summary>
         <ul>
             <li> <a href="mailto:dzenetan.massart@gmail.com">✉️ <span>e-mail</span></a>
             </a>
