--- a/portefolio.html
+++ b/portefolio.html
@@ -117,6 +117,8 @@
 <a href="https://www.behance.net/gallery/103840487/Chateau-de-La-Roche-en-Ardenne" class="projet">Château de La Roche-en-Ardenne</a>
 </article>
 </section>
+<!--La section Google Maps-->
+
 <h2> <img src="https://grafikart.fr/uploads/icons/google-maps.png" alt="Icone Google Maps" style="width:5vw" srcset="https://grafikart.fr/uploads/icons/google-maps.png"> Profil Google Maps</h2>
 <section class="gmaps">
                 <img src="https://lh3.googleusercontent.com/a/AGNmyxa_BgcJkRbCGTXGJVNyXX1pABnlPwK1bWwYX2AcfA=w60-h60-p-rp-mo-ba5-br100"
@@ -129,15 +131,16 @@
                 <div class="progress_bar">
                     <label for="gmpas">
                         <kbd>0</kbd>
-                        <span>5 647</span>
+                        <span>6 900</span>
                         <kbd>15 000</kbd>
                     </label>
 
-<progress id="gmaps" max="15000" value="5647"></progress>
+<progress id="gmaps" max="15000" value="6900"></progress>
                 </div>
 <a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
     target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
 </section>
+<!--La section LinkedIn-->
 
 <h2> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Icone LinkedIn" style="width:5vw; background-color: white;border-radius: 10%;"
     srcset="https://cdn-icons-png.flaticon.com/512/174/174857.png"> Profil LinkedIn</h2>
@@ -146,11 +149,27 @@
         alt="Profil Dzénetan Massart"
         srcset="https://media.licdn.com/dms/image/D4E03AQFHbSObPoyVjA/profile-displayphoto-shrink_200_200/0/1676642151006?e=1686182400&v=beta&t=FLuwuvieMEZlR9NNM0uVK7DHvty33h0EloSu1KW-tNc">
     <h3>Dzénetan Massart</h3>
-<p>367 abonnés - 363 relations</p>
+<p>390 abonnés - 385 relations</p>
 
-    <a href="https://www.linkedin.com/in/dzenetan-massart/" class="lien"
-        target="_blank" rel="noopener noreferrer">Voir le profil complet</a>
+    <a href="https://www.linkedin.com/in/dzenetan-massart/" class="lien" target="_blank" rel="noopener noreferrer">Voir le profil complet</a>
 </section>
+<!--La section Behance-->
+<h2> 
+    <img src="hhttps://a5.behance.net/409867d1b85129ac7d9775f71afaafc48451b85d/img/site/favicon.ico?cb=264615658" alt="Icone Behance" style="width:5vw; background-color: white;border-radius: 10%;"
+    srcset="https://a5.behance.net/409867d1b85129ac7d9775f71afaafc48451b85d/img/site/favicon.ico?cb=264615658"> Profil Behance
+</h2>
+
+<section class="BehanceProfil">
+    <img src="https://mir-s3-cdn-cf.behance.net/user/230/c9c830681896223.642e6ea89d797.jpg"
+        alt="Profil Dzénetan Massart"
+        srcset="https://mir-s3-cdn-cf.behance.net/user/230/c9c830681896223.642e6ea89d797.jpg">
+    <h3>Dzénetan Massart</h3>
+    <div>
+        <p>Nombre de vues des projets: 115 | Appréciations: 7 | Abonnés: 1 | Abonnements: 11 </p>
+    </div>
+    <a href="https://www.behance.net/dzenetan-massart" class="lien" target="_blank" rel="noopener noreferrer">Voir la gallerie complete</a>
+</section>
+
 </main>
 
 
