Ajout de la chaîne YouTube dans le portefolio

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </li>
             </ul>
             <ul class="programmes dys">
-                <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois régulièrement</span>
+                <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois</span>
 
                 <li>
                     Adobe Premiere Pro CS6 <sup>(amélioré avec des scripts)</sup>
@@ -265,6 +265,12 @@
                 </li>
                 <li>
                     Google Maps
+                </li>
+                <li>
+                    Google Docs
+                </li>
+                <li>
+                    Google Sheets
                 </li>
                 <li>
                     ILovePDF
