--- a/portefolio.html
+++ b/portefolio.html
@@ -131,11 +131,11 @@
                 <div class="progress_bar">
                     <label for="gmpas">
                         <kbd>0</kbd>
-                        <span>6 900</span>
+                        <span>7811</span>
                         <kbd>15 000</kbd>
                     </label>
 
-<progress id="gmaps" max="15000" value="6900"></progress>
+<progress id="gmaps" max="15000" value="7811"></progress>
                 </div>
 <a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
     target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
@@ -149,7 +149,7 @@
         alt="Profil Dzénetan Massart"
         srcset="https://media.licdn.com/dms/image/D4E03AQFHbSObPoyVjA/profile-displayphoto-shrink_200_200/0/1676642151006?e=1686182400&v=beta&t=FLuwuvieMEZlR9NNM0uVK7DHvty33h0EloSu1KW-tNc">
     <h3>Dzénetan Massart</h3>
-<p>390 abonnés - 385 relations</p>
+<p>420 abonnés - 419 relations</p>
 
     <a href="https://www.linkedin.com/in/dzenetan-massart/" class="lien" target="_blank" rel="noopener noreferrer">Voir le profil complet</a>
 </section>
@@ -165,9 +165,28 @@
         srcset="https://mir-s3-cdn-cf.behance.net/user/230/c9c830681896223.642e6ea89d797.jpg">
     <h3>Dzénetan Massart</h3>
     <div>
-        <p>Nombre de vues des projets: 115 | Appréciations: 7 | Abonnés: 1 | Abonnements: 11 </p>
+        <p>Nombre de vues des projets: 118 | Appréciations: 8 | Abonnés: 1 | Abonnements: 13 </p>
     </div>
     <a href="https://www.behance.net/dzenetan-massart" class="lien" target="_blank" rel="noopener noreferrer">Voir la gallerie complete</a>
+</section>
+
+<!--La section YouTube-->
+<h2> 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/640px-YouTube_full-color_icon_%282017%29.svg.png" alt="Icone YouTube" style="width:7vw; border-radius: 10%;"
+    srcset="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/640px-YouTube_full-color_icon_%282017%29.svg.png"> Chaîne YouTube
+</h2>
+
+<section class="YouTubeChaine">
+    <img src="https://yt3.googleusercontent.com/rtOi7w4tfsg25LOlx12qIvNUodrJsywvHEIJKPJR5GTaemXy6pJ4jxreMKSAvG-69BuUAfygkLo=s176-c-k-c0x00ffffff-no-rj"
+        alt="Chaîne Dzénetan Massart"
+        srcset="https://yt3.googleusercontent.com/rtOi7w4tfsg25LOlx12qIvNUodrJsywvHEIJKPJR5GTaemXy6pJ4jxreMKSAvG-69BuUAfygkLo=s176-c-k-c0x00ffffff-no-rj">
+    <h3>Dzénetan Massart</h3>
+    <div>
+        <script src="https://apis.google.com/js/platform.js"></script>
+
+        <div class="g-ytsubscribe" data-channelid="UCGefPHkJWvEIPUtLedRyJPA" data-layout="full" data-count="default"></div>
+    </div>
+    <a href="https://www.youtube.com/@DzenetanMassart/videos" class="lien" target="_blank" rel="noopener noreferrer">Voir la chaîne YouTube complete</a>
 </section>
 
 </main>
