Correction de la rapidité
Mise en Webp des PNGs,
Suppression des liens morts,
Oppressions du JS.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!Doctype html>
 
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DD2RVSTR9B"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DD2RVSTR9B');
 </script>
     <meta charset="UTF-8" />
     <meta lang="fr">
@@ -21,7 +13,6 @@
     <meta name="full-screen" content="yes">
     <link rel="stylesheet" href="assets/navbar/navbar.css">
     <link rel="stylesheet" href="assets/css/apps.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!--Generate with https://www.favicon-generator.org/-->
     <link rel="apple-touch-icon" sizes="57x57" href="root/ico/apple-icon-57x57.png">
@@ -63,7 +54,7 @@
  <!--Le header FIN-->
  <header class="dys" id="navigation">
 
-    <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" /> <span>Accueil</span> </a>
+    <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" width="50px" /> <span>Accueil</span> </a>
 
 <details class="cv">
 <summary>📜<span>Les CVs</span></summary>
