Amélioration de la visibilité

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 <body>
 
  <!--Le header FIN-->
- <header class="dys" id="navigation">
+ <header  id="navigation">
 
-    <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" height="40px" width="50px" /> <span>Accueil</span> </a>
+    <a href="index.html" class="active"><img src="assets/image/Dzénetan Massart.png" id="profil" alt="Vers l'Accueil" height="40px" width="50px" /> <span>Accueil</span> </a>
 
 <details class="cv">
 <summary>📜<span>Les CVs</span></summary>
@@ -88,10 +88,10 @@
 <script src="assets/navbar/navbar.js"></script>
 <!--Le main Debut-->
 
-    <main class="dys">
+    <main >
 
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
-        <div class="intro dys">
+        <div class="intro ">
             <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"<sup><i class="fa-solid fa-link"></i></sup></a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan
                 Massart.
             </p>
@@ -99,7 +99,7 @@
             <p>Depuis Novembre 2022, Dzénetan Massart est membre de la <a href="https://smartbe.be/fr/">Smart<sup><i class="fa-solid fa-link"></i></sup></a> pour les prestations.</p>
         </div>
         <div class="inline">
-            <ul class="logiciels dys">
+            <ul class="logiciels ">
                 <span> <i class="fas fa-laptop"></i> Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
 
                 <li>
@@ -107,9 +107,6 @@
                 </li>
                 <li>
                     <a href="https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp">Bootstrap</a>
-                </li>
-                <li>
-                    <a href="https://fontawesome.com/start">FontAwesome</a>
                 </li>
                 <li>
                     <a href="https://www.photopea.com/">Photopea</a>
@@ -123,10 +120,16 @@
                 <li>
                     <a href="https://htmlcheatsheet.com/css/">CSS CheatSheet</a>
                 </li>
+                <li>
+                    <a href="https://developer.chrome.com/docs/lighthouse/overview/">L'extension Google Chrome "Lighthouse"</a>
+                </li>
+                <li>
+                    <a href="https://app.contrast-finder.org/?lang=fr">Contrast Finder</a>
+                </li>
             </ul>
 
 
-            <ul class="technologies dys">
+            <ul class="technologies ">
                 <span> <i class="fas fa-laptop-code"></i> Liste des langages que j'emplois pour créer ce site:</span>
                 <li>
                     Français
@@ -151,7 +154,7 @@
                 </li>
             </ul>
 
-            <ul class="capacites dys">
+            <ul class="capacites ">
                 <span> <i class="fas fa-briefcase"></i> Liste des capacités que je peux vous proposer</span>
 
                 <li title="J'utilise donc Adobe Premiere et Adobe After Effect principalement">
@@ -206,13 +209,16 @@
                 Classement <sup>(Employé de Services)</sup>
                 </li>
                 <li title="J'utilise donc une imprimante et ILovePDF">
-                Photocopier <sup>(Employé de Services)</sup>
+                Impression <sup>(Employé de Services)</sup>
                 </li>
                 <li title="J'utilise donc mes mains et mes pieds pour mettre la lettre dans une boite rouge">
                 Mise sous enveloppe <sup>(Employé de Services)</sup>
                 </li>
+                <li title="J'utilise Microsoft Word ou équivalent">
+                    Rédaction<sup>(Employé de Services)</sup>
+                    </li>
             </ul>
-            <ul class="programmes dys">
+            <ul class="programmes ">
                 <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois</span>
 
                 <li>
@@ -249,7 +255,7 @@
                     Panzoid Clipmaker 2
                 </li>
                 <li>
-                    Blender
+                    Blender <sup>(amélioré avec des plugins)</sup>
                 </li>
                 <li>
                     FireAlpaca
@@ -280,7 +286,7 @@
     <!--Le main FIN-->
 
     <!--La div ayant les applications DEBUT-->
-    <section class="apps dys">
+    <section class="apps ">
         <h2 id="outils">Les Outils</h2>
         <p class="description">Ici se trouvent les outils que j'ai créés sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github<sup><i class="fa-solid fa-link"></i></sup> </a>!</p>
         <div class="appsview" id="generate"></div>
@@ -288,16 +294,16 @@
     <!--La div ayant les applications FIN-->
 
     <!--La div ayant le parcours DEBUT-->
-    <section class="parcours dys">
+    <section class="parcours ">
         <h2 id="parcours">Le Parcours</h2>
         <p class="description">Ici se trouvent mon parcours d'apprentissage des logiciels !</p>
-        <div class="parc dys" id="parc">
+        <div class="parc " id="parc">
 
         </div>
     </section>
 
     <!--La div ayant le parcours FIN-->
-    <div class="copyright">Copyright © 2017-2023 Dzénetan Massart</div>
+    <div class="copyright">Copyright ©2017-2023 Dzénetan Massart</div>
 
 
     <!--Les scripts-->
